--- a/droplinked-near/Cargo.toml
+++ b/droplinked-near/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "status-message"
+name = "droplinked"
 version = "0.1.0"
-authors = ["Near Inc <hello@nearprotocol.com>"]
-edition = "2018"
+authors = ["Droplinked <matin.ghiasvand1381@gmail.com>"]
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -10,9 +10,10 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
-near-sdk = "4.0.0"
+near-sdk = "4.1.1"
 base16 = { version = "0.2", default-features = false, features = ["alloc"] }
-
+ed25519 = { version = "2.0.1", default-features = false}
+ed25519-dalek = { version = "1.0.1", default-features = false}
 
 [profile.release]
 codegen-units = 1
